# 2025-ectf-bw

./: .gitignore  README.md  flash_test_deployment.sh  gen_test_deployment.sh
decoder/: Cargo.toml  Dockerfile  README.md  build.rs  build.sh  flash.sh  memory.x  openocd.cfg  openocd.gdb  rust-toolchain.toml  start_gdb.sh  test_build.sh
decoder/examples/: blinky.rs
decoder/src/: cmd_logic.rs  crypto.rs  decoder.c  decoder.rs  flash.rs  host_comms.rs  led.rs  main.rs  timer.rs
design/: pyproject.toml
design/ectf25_design/: encoder.py  gen_secrets.py  gen_subscription.py
docs/: 1-introduction.md  2-protocol.md  3-secrets.md  4-secreqs.md  4-secrets.md  5-storage.md  assemble_document.sh
