[package]
name = "decoder"
authors = ["BWCyberSec"]
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["set-sp", "set-vtor"] }
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
max7800x-hal = "0.5.0"
panic-halt = "1.0.0"
rand = { version = "0.8.5", default-features = false }
cortex-m-semihosting = "0.5"
panic-semihosting = "0.6"
embedded-alloc = "0.6"
heapless = "0.8"
postcard = "1.0"
serde = { version = "1.0.*", default-features = false }

[build_dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
hkdf = "0.12"
sha2 = "0.10"