[package]
name = "decoder"
authors = ["BWCyberSec"]
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["set-sp", "set-vtor"] }
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
max7800x-hal = { version = "0.6.1", features = ["flashprog-linkage"] }
panic-halt = "1.0.0"
rand = { version = "0.8.5", default-features = false }
heapless = "0.8"
postcard = "1.0"
serde = { version = "1.0.*", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["heapless"] }
ed25519-dalek = { version = "2", default-features = false }
once_cell = { version = "1.20", default-features = false, features = ["critical-section"] }
critical-section = "1.2.0"
zeroize = { version = "1.8", default-features = false }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
hkdf = "0.12"
sha2 = "0.10"
ed25519-dalek = "2"
getrandom = "0.3"
